--- a/manuscript-main.Rmd
+++ b/manuscript-main.Rmd
@@ -1,38 +1,33 @@
 ---
 title: "Aligning species range data to better serve science and conservation"
-author: "Casey O'Hara^1^, Jamie Afflerbach^1^, Benjamin S. Halpern^1, 2, 3^"
+author: "Casey O'Hara^1^, Jamie Afflerbach^1^, Benjamin S. Halpern<sup>1, 2, 3</sup>"
 output:
-  word_document: default
-  pdf_document:
-    number_sections: yes
-    toc: no
   html_document:
     highlight: haddock
     number_sections: yes
     theme: spacelab
     toc: no
+  pdf_document:
+    number_sections: yes
+    toc: no
+  word_document: default
 ---
 
 <!--Title: Titles should be no more than three typeset lines (generally 135 characters including spaces) and should be comprehensible to a broad scientific audience. Please provide a short title of fewer than 50 characters for mobile devices and RSS feeds.-->
 
 
-_Classification:_
-
-* BIOLOGICAL SCIENCES: 
-    * Ecology? Environmental Sciences? Sustainability Science?
-
 _Author affiliation:_ <!--Include department, institution, and complete address, with the ZIP/postal code, for each author. Use superscripts to match authors with institutions. Authors are encouraged to supply their ORCID ID at submission-->
 
-1. National Center for Ecological Analysis and Synthesis, 735 State Street, Suite 300, Santa Barbara CA 93101
+1. National Center for Ecological Analysis and Synthesis, 735 State Street Suite 300, Santa Barbara CA 93101
 2. Bren School of Environmental Science and Management, University of California, Santa Barbara CA 93106
-3. Imperial College London, Silwood Park Campus, Ascot, United Kingdom (need address?)
+3. Department of Life Sciences, Imperial College London, Silwood Park Campus, Buckhurst Rd, Ascot, West Berkshire SL5 7PY, United Kingdom (ZIP/postal code?)
 
 _Corresponding author:_ <!--Corresponding author: The name, complete address, telephone number, and email address of the author to whom correspondence and proofs should be sent. Email addresses will appear in the article footnotes.-->
+Casey O'Hara, National Center for Ecological Analysis and Synthesis, 735 State Street, Suite 300, Santa Barbara CA 93101; _NCEAS phone #? or one that's actually likely to reach me?_; ohara@nceas.ucsb.edu
 
-* Casey O'Hara, National Center for Ecological Analysis and Synthesis, 735 State Street, Suite 300, Santa Barbara CA 93101; _NCEAS phone #?_; ohara@nceas.ucsb.edu
+_Classification:_ BIOLOGICAL SCIENCES: Ecology? Environmental Sciences? Sustainability Science?
 
-
-_Keywords:_ <!--Keywords are listed below the abstract of the published article. At least three keywords are required at submission.--> TBD
+_Keywords:_ <!--Keywords are listed below the abstract of the published article. At least three keywords are required at submission.  maybe species distribution maps, AquaMaps, IUCN, marine protected area planning, biodiversity status--> TBD
 
 <!--
 
