--- a/ms_1_abst_sig.Rmd
+++ b/ms_1_abst_sig.Rmd
@@ -6,7 +6,7 @@ _Abstract. Provide an abstract of no more than 250 words on page 2 of the manusc
 Species distribution data provide the foundation for a wide range of ecological research and conservation science and management, yet most species ranges remain unknown, and existing range maps have little overlap. In the ocean, two global species distribution datasets - AquaMaps and the International Union for Conservation of Nature (IUCN) - dominate our understanding of marine species ranges throughout the world's oceans, representing `r format(nrow(spp_all), big.mark = ',')` species overall, mostly from AquaMaps, with only `r format(nrow(spp_map_pairs), big.mark = ',')` species overlapping.  Here we examine differences in predicted species ranges between the two datasets, propose mechanistic causes and potential solutions for such differences, and explore the implications of these differences for management and conservation decisions.  We find that IUCN maps often disregard bathymetry for depth-limited species, leading to predictions of species presence at unsuitable depths, and AquaMaps ranges for data-poor species often extrapolate presence far afield from known occurrences.  We illustrate the implications of these differences by repeating two recent applications - the Ocean Health Index biodiversity goal and a global analysis of gaps in coverage of marine protected areas - and find significantly different estimates of the status of species diversity and effectiveness of conservation depending on which dataset was used.
 Understanding these issues points toward solutions for providers and users of these datasets.
 
-
+(206 words; 1462 char with spaces)
 
 -----
 
